--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "google-search-results-nodejs": "^2.1.0",
     "http": "^0.0.1-security",
     "mongodb": "^5.4.0",
     "node-fetch": "^3.3.1"
